* Collaborator title wrapping fixed

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-materials-management.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-materials-management.scss
@@ -460,6 +460,7 @@ body.workspace-materials-management {
               max-height:28px;
               font-size:14px;
               box-shadow:-4px 0px 10px rgba(0,0,0,0.05);
+              white-space:nowrap;
             }
             
             &:hover {
